fix(login): slightly smaller brackets (offset 90, arm 63), no elements cut off

--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@
   z-index: -1;
 
   background-color: #0b0b0b;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='500' height='500' viewBox='0 0 500 500'%3E%3Cg stroke='%23F6B31A' stroke-width='21' fill='none' stroke-linecap='round'%3E%3Cpath d='M20 100V30H90'/%3E%3Cpath d='M150 30H220V100'/%3E%3Cpath d='M20 160V230H90'/%3E%3Cpath d='M150 230H220V160'/%3E%3Cpath d='M300 390V320H370'/%3E%3Cpath d='M430 320H500V390'/%3E%3Cpath d='M300 450V520H370'/%3E%3Cpath d='M430 520H500V450'/%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='500' height='500' viewBox='0 0 500 500'%3E%3Cg stroke='%23F6B31A' stroke-width='21' fill='none' stroke-linecap='round'%3E%3Cpath d='M40 113V50H103'/%3E%3Cpath d='M157 50H220V113'/%3E%3Cpath d='M40 167V230H103'/%3E%3Cpath d='M157 230H220V167'/%3E%3Cpath d='M290 373V310H353'/%3E%3Cpath d='M407 310H470V373'/%3E%3Cpath d='M290 427V490H353'/%3E%3Cpath d='M407 490H470V427'/%3E%3C/g%3E%3C/svg%3E");
   background-repeat: repeat;
   background-size: 500px 500px;
 
